# ball3d

./: .gitignore  README.md  estimate_trajectory.py  eval_table3.sh  eval_table5.sh  eval_table6.sh  evaluate_trajectory.py  preprocess_trajectory.py  pyproject.toml  visualize_trajectory.py
conf/: base.yaml  triangulation_base.yaml
conf/experiment/: gt_pivots.yaml
conf/preprocessing/: base.yaml
conf/trajectory/: base_trajectory.yaml  basic_angular_velocity.yaml  basic_angular_velocity_multistart.yaml  basic_angular_velocity_nstarts10.yaml  basic_angular_velocity_wider_spin.yaml  basic_kinetic_estimator.yaml  basic_kinetic_estimator_parabola.yaml  basic_kinetic_estimator_parabola_no_end.yaml  basic_kinetic_estimator_parabola_no_z.yaml  basic_kinetic_estimator_parabola_traj_only.yaml  basic_kinetic_fitg.yaml  basic_kinetic_fitg_no_end.yaml  basic_kinetic_fitg_no_z.yaml  basic_kinetic_fitg_traj_only.yaml  mujoco_angular_velocity.yaml  mujoco_ellipsoid_angular_velocity.yaml  mujoco_ellipsoid_base.yaml  mujoco_kinetic_estimator.yaml  scipy_angular_velocity.yaml  scipy_kinetic_estimator.yaml
conf/triangulation/: base.yaml  v1.yaml  v2_no_gapfill.yaml  v2_pairwise.yaml
conf/visualisation/: base.yaml
src/ball_estimation/: evaluate.py  functions.py  processors.py  split.py  statistics.py  statistics_gt.py  triangulation.py  visualize.py  visualize_original.py
src/ball_estimation/camera/: __init__.py  preprocess.py
src/ball_estimation/io/: versioned.py  video.py
src/ball_estimation/preprocessing/: __init__.py  contact.py  pivot_point.py  smoothing.py  tracking.py
(+10 files in other folders)
